@@ -6,8 +6,8 @@
 <body onload="document.getElementById('selectId').focus()">
 <p><b>BUG ID:<a href="https://bugs.webkit.org/show_bug.cgi?id=18363">18363</a>.</p>
 <p id="description">
-This test ensures that pressing spacebar on Mac and Gtk ports or pressing
-return in Gtk port will popup the select control when focused.
+This test ensures that pressing spacebar on Mac, Gtk and Chromium ports or pressing
+return in Gtk and Chromium ports will popup the select control when focused.
 </p>
 
 <p id="test" style="background-color:skyblue; padding:3px;"><b>STEPS TO TEST:</b> <br>
